--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,10 @@
   --color-black:  #16252E;
 }
 
+* {
+  list-style: none;
+}
+
 .nav_active {
   color: var(--color-red);
 }
@@ -17,37 +21,62 @@ body * {
   color: var(--color-black);
   font-family: var(--font-main);
   font-weight: 500;
-}
-
-p,
-span,
-a,
-input,
-select,
-textarea,
-button,
-div {
   font-size: 15px;
 }
+
 
 .font_lilita {
   font-family: var(--font-lilita);
 }
 
 
-
-.container {
+/* .container {
   width: 100%;
-  max-width: 1170px;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-}
+  padding-left: 15px;
+  padding-right: 15px;
+} */
 
 .block_latest_video,
 .block_latest_blog {
   position: relative;
 }
-.block_latest_video::before,
+
+
+.btn {
+  padding: 12px 24px;
+  border-radius: 999px;
+  font-family: var(--font-lilita);
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.btn_yellow {
+  background: var(--color-yellow);
+}
+
+.btn_pink {
+  background: var(--color-pink);
+  color: #fff;
+}
+
+header, .clouds {
+  background-image: url(../img/clouds.jpg);
+}
+
+.block_promo, footer {
+  background-position: top;
+  background-size: 140% 300%;
+}
+
+@media (min-width: 992px) {
+  .block_latest_video::before,
 .block_latest_video::after,
 .block_latest_blog::before,
 .block_latest_blog::after {
@@ -83,33 +112,4 @@ div {
   background-image: url(../img/LeftGraphicsLong.svg);
   transform: scaleX(-1)
 }
-
-.btn {
-  padding: 12px 24px;
-  border-radius: 999px;
-  font-family: var(--font-lilita);
-  font-size: 18px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: fit-content;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-.btn_yellow {
-  background: var(--color-yellow);
-}
-
-.btn_pink {
-  background: var(--color-pink);
-  color: #fff;
-}
-
-header, .clouds {
-  background-image: url(../img/clouds.jpg);
-}
-
-.block_promo, footer {
-  background-position: top;
-  background-size: 140% 300%;
 }
